[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "2.0.0"
cgmath = "0.18.0"
num-integer = "0.1.45"
sorted-vec = "0.8.3"
regex = {version="*", default-features = false}
itertools = "0.13.0"
slab_tree = "0.3.2"
rand = "0.8.5"
